# sc-delegation-rs

auction-mock/: Cargo.toml
auction-mock/meta/: Cargo.toml
auction-mock/wasm/: Cargo.toml
latest/: Cargo.toml
latest/src/: user_stake_endpoints.rs
latest_full/: Cargo.toml
latest_full/meta/: Cargo.toml
latest_full/wasm/: Cargo.toml
latest_update/: Cargo.toml
latest_update/meta/: Cargo.toml
latest_update/wasm/: Cargo.toml
node-storage/: Cargo.toml
user-fund-storage/: Cargo.toml
