[package]
name = "auction-mock"
version = "0.3.4"
authors = ["Andrei Marinica <andrei.marinica@multiversx.com>"]
edition = "2018"
[dependencies.node-storage]
path = "../node-storage"

[dependencies.multiversx-sc]
git = "https://github.com/newtmex/mx-sdk-rs.git"
branch = "hackathon-feat"
features = ["alloc"]
[dev-dependencies.multiversx-sc-scenario]
git = "https://github.com/newtmex/mx-sdk-rs.git"
branch = "hackathon-feat"
