[package]
name = "delegation_latest"
version = "0.5.8"
authors = ["Andrei Marinica <andrei.marinica@multiversx.com>"]
edition = "2018"
[dependencies.node-storage]
path = "../node-storage"

[dependencies.user-fund-storage]
path = "../user-fund-storage"

[dependencies.multiversx-sc-modules]
git = "https://github.com/newtmex/mx-sdk-rs.git"
branch = "hackathon-feat"

[dependencies.multiversx-sc]
git = "https://github.com/newtmex/mx-sdk-rs.git"
branch = "hackathon-feat"
[dev-dependencies.multiversx-sc-scenario]
git = "https://github.com/newtmex/mx-sdk-rs.git"
branch = "hackathon-feat"
