[package]
name = "delegation_latest_full"
version = "0.5.8"
authors = ["Andrei Marinica <andrei.marinica@multiversx.com>"]
edition = "2018"
[dependencies.delegation_latest]
path = "../latest"

[dependencies.multiversx-sc]
git = "https://github.com/newtmex/mx-sdk-rs.git"
branch = "hackathon-feat"
[dev-dependencies.multiversx-sc-scenario]
git = "https://github.com/newtmex/mx-sdk-rs.git"
branch = "hackathon-feat"

[dev-dependencies.auction-mock]
path = "../auction-mock"
