[package]
name = "user-fund-storage"
version = "0.5.8"
authors = ["Andrei Marinica <andrei.marinica@multiversx.com>"]
edition = "2018"
[dependencies.multiversx-sc]
git = "https://github.com/newtmex/mx-sdk-rs.git"
branch = "hackathon-feat"
[dev-dependencies.multiversx-sc-scenario]
git = "https://github.com/newtmex/mx-sdk-rs.git"
branch = "hackathon-feat"
