[package]
name = "auction-mock-meta"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@multiversx.com>"]
edition = "2018"
publish = false
[dependencies.auction-mock]
path = ".."

[dependencies.multiversx-sc-meta]
git = "https://github.com/newtmex/mx-sdk-rs.git"
branch = "hackathon-feat"
