[package]
name = "delegation-latest-full-abi"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@multiversx.com>"]
edition = "2018"
publish = false
[dependencies.delegation_latest_full]
path = ".."

[dependencies.multiversx-sc-meta]
git = "https://github.com/newtmex/mx-sdk-rs.git"
branch = "hackathon-feat"
